--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Shoyo Digital Products</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <style>
+    h1, h2 {
+      font-family: 'Anton', sans-serif;
+    }
+  </style>
 </head>
-<body>
-  <header>
-    <div class="container">
-      <h1>Shoyo Digital Products</h1>
-      <p>eBooks & Templates for Creators, Entrepreneurs, and Dreamers</p>
-    </div>
+<body class="bg-gradient-to-br from-blue-900 to-purple-700 text-white">
+
+  <!-- Header -->
+  <header class="flex justify-between items-center p-6 bg-black bg-opacity-30">
+    <h1 class="text-3xl">SHOYO</h1>
+    <nav class="space-x-6 text-lg">
+      <a href="#" class="hover:underline">Home</a>
+      <a href="#products" class="hover:underline">Products</a>
+      <a href="#pricing" class="hover:underline">Pricing</a>
+      <a href="#about" class="hover:underline">About</a>
+      <button class="bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded">Sign In</button>
+    </nav>
   </header>
 
-  <main class="container">
-    <section class="hero">
-      <h2>Level Up with Powerful Digital Tools</h2>
-      <p>Discover high-quality, ready-to-use eBooks and templates to grow faster.</p>
-      <a href="products.html" class="btn">Explore Products</a>
-    </section>
-  </main>
+  <!-- Hero Section -->
+  <section class="text-center py-20 px-4">
+    <h2 class="text-5xl mb-4">Digital Products</h2>
+    <p class="text-lg mb-8">Explore and purchase a variety of unique digital products</p>
+    <a href="#products" class="bg-pink-500 hover:bg-pink-600 px-6 py-3 rounded text-white text-xl">Browse Products</a>
+  </section>
 
-  <footer>
-    <div class="container">
-      <p>© 2025 Shoyo Digital Products. All rights reserved.</p>
+  <!-- Products Section -->
+  <section id="products" class="bg-white text-black py-16 px-6">
+    <h2 class="text-3xl text-center mb-10">Featured</h2>
+    <div class="grid md:grid-cols-4 gap-6 text-center">
+      <div class="bg-gray-100 p-6 rounded shadow">
+        <div class="text-purple-600 text-4xl">📘</div>
+        <h3 class="text-xl font-semibold mt-4">Ebook</h3>
+        <p>Learn with digital guides and PDFs.</p>
+      </div>
+      <div class="bg-gray-100 p-6 rounded shadow">
+        <div class="text-blue-500 text-4xl">🖼️</div>
+        <h3 class="text-xl font-semibold mt-4">Photos</h3>
+        <p>Creative image packs and collections.</p>
+      </div>
+      <div class="bg-gray-100 p-6 rounded shadow">
+        <div class="text-pink-500 text-4xl">🎨</div>
+        <h3 class="text-xl font-semibold mt-4">Templates</h3>
+        <p>Editable Canva and Notion templates.</p>
+      </div>
+      <div class="bg-gray-100 p-6 rounded shadow">
+        <div class="text-purple-500 text-4xl">🎵</div>
+        <h3 class="text-xl font-semibold mt-4">Music</h3>
+        <p>Audio tracks and sound packs.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-black bg-opacity-30 text-center text-white py-6">
+    <p>&copy; 2025 Shoyo Digital. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
